unread badge, and truncate fixes
dropdown in navigation

--- a/scss/overrides.scss
+++ b/scss/overrides.scss
@@ -40,6 +40,9 @@ $text-muted: $gray-600 !default;
 
 $border-color: $gray-200 !default;
 
+// no caret on dropdown-toggle
+$enable-caret: false;
+
 // disable smooth scroll, this makes window.scrollTo(0,0) in ajaxify.js take x milliseconds
 $enable-smooth-scroll: false;
 
